# pixiv-rs

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  responses.rs
tests/: common.rs  test_illustrations.rs
